--- a/busybus5.html
+++ b/busybus5.html
@@ -11,8 +11,9 @@
     <section class="container">
       <!-- Top Nav Section -->
       <div class="nav">
+        <!-- Back arrow -->
         <div class="left-arrow"></div>
-        <div class="icon"></div>
+        <!--Name of stop at top of page-->
         <h1>Washington/State</h1>
       </div>
       <!-- Map Section -->
