--- a/busybus5.html
+++ b/busybus5.html
@@ -11,9 +11,7 @@
     <section class="container">
       <!-- Top Nav Section -->
       <div class="nav">
-        <!-- Back arrow -->
         <div class="left-arrow"></div>
-        <!--Name of stop at top of page-->
         <h1>Washington/State</h1>
       </div>
       <!-- Map Section -->
@@ -93,7 +91,7 @@
         <li class="bus-route borange">
             <div class="busline orange">
               <h2 class="orange">6X</h2>
-              <p><span style="font-size: 20px;">&#8620;</span> Jackson Park Express</p>
+              <p><span style="font-size: 20px;">&#8620;</span> Jackson Park&nbspExpress</p>
               <p class="direction">Re-route</p>
             </div>
         </li>
