--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <section class="container">
       <!-- Top Nav Section -->
       <div class="nav">
-        <div class="left-arrow"></div>
+        <div class="left-arrow">
+          <h1>Back</h1></div>
         <h1>Washington/State</h1>
       </div>
       <!-- Map Section -->
