--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
       <!-- Top Nav Section -->
       <div class="nav">
         <div class="left-arrow">
-          <h1>Back</h1></div>
+          </div>
+        <h1>Back</h1>
         <h1>Washington/State</h1>
       </div>
       <!-- Map Section -->
