--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
     <section class="container">
       <!-- Top Nav Section -->
       <div class="nav">
-        <div class="left-arrow">
-          <h1>Back</h1>
+        <div class="left-arrow" Back>
           </div>
        
         <h1>Washington/State</h1>
