--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <section class="container">
       <!-- Top Nav Section -->
       <div class="nav">
-        <div class="left-arrow" Back>
+        <div class="left-arrow">
+          <h4>Back</h4>
           </div>
        
         <h1>Washington/State</h1>
