--- a/index.html
+++ b/index.html
@@ -11,10 +11,7 @@
     <section class="container">
       <!-- Top Nav Section -->
       <div class="nav">
-        <div class="left-arrow">
-          <h4>Back</h4>
-          </div>
-       
+        <div class="left-arrow"></div>
         <h1>Washington/State</h1>
       </div>
       <!-- Map Section -->
